fix for asset pipeline images not showing?

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,13 +57,13 @@
   color:black;
  }
  #one{
-  background-image: url("menu-1.jpg");
+  background-image: url("/assets/images/menu-1.jpg");
  }
  #two{
-  background-image: url("menu-2.jpg");
+  background-image: url("/assets/images/menu-2.jpg");
  }
  #three{
-  background-image: url("menu-3.jpg");
+  background-image: url("/assets/images/menu-3.jpg");
  }
 
  .forms{
